k8s-files/kubernetes/examples/istio/nginx-example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-namespace
  labels:
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-external
  namespace: nginx-namespace
spec:
  selector:
    istio: loadbalancer-external # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx-namespace
spec:
  hosts:
    - '*'
  gateways:
    - gateway-external
  http:
  - route:
    - destination:
        host: nginx.nginx-namespace.svc.cluster.local
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-namespace
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-namespace
  annotations:
    kubernetes.io/change-cause: "New change"
  labels:
    app: nginx
spec:
  revisionHistoryLimit: 5
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 1Gi
        readinessProbe:
          exec:
            command: ['ls']
          initialDelaySeconds: 10
